--- a/comparison.html
+++ b/comparison.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="style.css">
 
   <nav class="navbar navbar-custom navbar-expand-lg navbar-light bg-white">
-    <a class="navbar-brand" href="#" id="logo">Lattitude</a>
+    <a class="navbar-brand" href="index.html" id="logo">Latitude</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -26,14 +26,14 @@
             Plots
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">Max Temperature</a>
-            <a class="dropdown-item" href="#">Humidity</a>
-            <a class="dropdown-item" href="#">Cloudiness</a>
-            <a class="dropdown-item" href="#">Wind Speed</a>
+            <a class="dropdown-item" href="temp.html">Max Temperature</a>
+            <a class="dropdown-item" href="humidity.html">Humidity</a>
+            <a class="dropdown-item" href="cloud.html">Cloudiness</a>
+            <a class="dropdown-item" href="wind.html">Wind Speed</a>
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Comparison</a>
+          <a class="nav-link" href="comparison.html">Comparison</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Data</a>
@@ -46,10 +46,7 @@
 
 <body>
   <br><br><br>
-  <!-- Our rows function in containers (grid created). -->
   <div class="container"><br>
-
-    <!-- Our columns function in rows. -->
     <div class="row">
       <h1>
         Comparison: Latitude vs X
@@ -68,13 +65,13 @@
       <div class="col-md-6">
         <h4 class="text-center">vs. Max Temperature</h4>
         <div class="thumbnail">
-          <img src="Resources/assets/images/Fig1.png" class="img-fluid">
+            <a href="temp.html"><img src="Resources/assets/images/Fig1.png" class="img-fluid"></a>
         </div>
       </div>
       <div class="col-md-6">
         <h4 class="text-center">vs. Humidity</h4>
         <div class="thumbnail">
-          <img src="Resources/assets/images/Fig2.png" class="img-fluid">
+            <a href="humidity.html"><img src="Resources/assets/images/Fig2.png" class="img-fluid"></a>
         </div>
       </div>
     </div>
@@ -83,13 +80,13 @@
       <div class="col-md-6">
         <h4 class="text-center">vs. Cloudiness</h4>
         <div class="thumbnail">
-          <img src="Resources/assets/images/Fig3.png" class="img-fluid">
+            <a href="cloud.html"><img src="Resources/assets/images/Fig3.png" class="img-fluid"></a>
         </div>
       </div>
       <div class="col-md-6">
         <h4 class="text-center">vs. Wind Speed</h4>
         <div class="thumbnail">
-          <img src="Resources/assets/images/Fig4.png" class="img-fluid">
+            <a href="wind.html"><img src="Resources/assets/images/Fig4.png" class="img-fluid"></a>
         </div>
       </div>
     </div>
