--- a/humidity.html
+++ b/humidity.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Landing Page </title>
+  <title>Humidity </title>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -50,14 +50,13 @@
     <div class="row">
       <div class="col-md-8">
         <h1>
-            Summary: Latitude vs. X
+            Humidity
         </h1>
         <hr class="line">
         <div class="thumbnail">
-          <img src="Resources/assets/images/Fig1.png" class="img-fluid" id="description-image">
+          <img src="Resources/assets/images/Fig2.png" class="img-fluid">
         </div>
-        <p>The purpose of this project was to analyze how weather changes as you get closer to the equator. To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.</p>
-        <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. Factors we looked at included: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
+        <p>With our current analysis, it is difficult to find any obvious correlation between latittude and humidity. There is a clear band of many data points at 100% humidity, and there do seem to be strong clusters of high humidity around the equator and in some other areas (e.g. a strong band of 0% humidity at latitude > 60). Further analysis is required.</p>
       </div>
         <div class="col-md-4">
             <h4>Visualizations</h4>
