fixing last correction

--- a/temp.html
+++ b/temp.html
@@ -36,7 +36,7 @@
           <a class="nav-link" href="comparison.html">Comparison</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Data</a>
+          <a class="nav-link" href="data.html">Data</a>
         </li>
       </ul>
     </div>
@@ -62,7 +62,7 @@
             <h4>Visualizations</h4>
             <hr>
             <div id="images">
-                <a href="temp.html"><img src="Resources/assets/images/Fig1.png" alt="Latitude vs. Max Temperature" class="landing-photo-links"></a>
+                <a href="temp.html"><img src="Resources/assets/images/Fig1.png" alt="Latitude vs. Max Temperature" class="landing-photo-current"></a>
                 <a href="humidity.html"><img src="Resources/assets/images/Fig2.png" alt="Latitude vs. Humidity" class="landing-photo-links"></a>
                 <a href="cloud.html"><img src="Resources/assets/images/Fig3.png" alt="Latitude vs. Cloudiness" class="landing-photo-links"></a>           
                 <a href="wind.html"><img src="Resources/assets/images/Fig4.png" alt="Latitude vs. Wind Speed" class="landing-photo-links"></a>
